--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,3 +14,8 @@ html, body ,#app {
     margin: 15px;
     box-shadow: 0 1px 1px rgba(0,0,0,0.15);
 }
+
+/*富文本编辑器最小高度*/
+.ql-editor {
+    min-height: 300px;
+}
